--- a/src/views/moviesAdd.ejs
+++ b/src/views/moviesAdd.ejs
@@ -22,31 +22,31 @@
         <form action="/movies/create" method="POST">
 
             <label for="title">Title </label>
-            <p><input type="text" name="title" id="" value="<%= locals.old && old.title ? old.title : null %>" required>
+            <p><input type="text" name="title" id="" value="<%= locals.old && old.title ? old.title : null %>">
             <% if (locals.errors && errors.title) { %> 
                 <small> <%= errors.title.msg %>  </small>
             <% } %></p> 
 
             <label for="rating">Rating </label>
-            <p><input type="number" name="rating" id="" value="<%= locals.old && old.rating ? old.rating : null %> " required>
+            <p><input type="number" name="rating" id="" value="<%= locals.old && old.rating ? old.rating : null %> ">
             <% if (locals.errors && errors.rating) { %> 
                 <small> <%= errors.rating.msg %>  </small>
             <% } %></p>
 
             <label for="awards">Awards </label>
-            <p><input type="number" name="awards" id="" value="<%= locals.old && old.awards ? old.awards : null %> " required>
+            <p><input type="number" name="awards" id="" value="<%= locals.old && old.awards ? old.awards : null %> ">
             <% if (locals.errors && errors.awards) { %> 
                 <small> <%= errors.awards.msg %>  </small>
             <% } %></p>
 
             <label for="release_date">Release date </label>
-            <p><input type="date" name="release_date" id="" value="<%= locals.old && old.release_date ? old.release_date : null %> " required>
+            <p><input type="date" name="release_date" id="" value="<%= locals.old && old.release_date ? old.release_date : null %> ">
             <% if (locals.errors && errors.release_date) { %> 
                 <small> <%= errors.release_date.msg %>  </small>
             <% } %></p>
 
             <label for="length">Length </label>
-            <p><input type="number" name="length" id="" value="<%= locals.old && old.length ? old.length : null %> " required>
+            <p><input type="number" name="length" id="" value="<%= locals.old && old.length ? old.length : null %> ">
             <% if (locals.errors && errors.length) { %> 
                 <small> <%= errors.length.msg %>  </small>
             <% } %></p>
